--- a/src/00-homepage/styles/NewsCrawl.scss
+++ b/src/00-homepage/styles/NewsCrawl.scss
@@ -29,6 +29,7 @@ $border-radius-button: 8px;
     width: 100%;
     max-width: 390px;
     display: flex;
+    align-items: center;
     position: absolute;
     top: 0;
     bottom: 0;
