--- a/src/05-member/style/profile-pages/LikesForum.scss
+++ b/src/05-member/style/profile-pages/LikesForum.scss
@@ -34,6 +34,8 @@
       width: 100%;
       height: 100%;
       overflow: auto;
+      display: flex;
+      flex-wrap: wrap;
 
       .s-l-f-data {
         display: flex;
@@ -99,6 +101,60 @@
 
       .s-l-f-data-error {
         font-size: 24px;
+      }
+      .p-love-card-container{
+        width: 23%;
+        margin: 5px;
+        // border: 1px solid #000;
+        .p-love-card-title{
+          height: 30px;
+          background-color: #113f75;
+          border-radius: 10px 10px 0 0 ;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          i{
+            color: #f00;
+            text-align: center;
+            font-size: 20px;
+          }
+        }
+        .p-love-card-cover-middle{
+          padding: 5px;
+          display: flex;
+          justify-content: center;
+          border: 1px solid #000;
+          .p-love-card-cover-wrap{
+            width: 180px;
+            height: 100px;
+            overflow: hidden;
+            .p-love-card-cover{
+              width: 100%;
+              // object-fit: cover;
+              // object-position: 50% 80%;
+            }
+          }
+        }
+        .p-love-card-footer{
+          height: 50px;
+          background-color: #113f75;
+          border-radius: 0 0 10px 10px;
+          padding: 0 10px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          
+          .p-love-card-name{
+            font-size: 16px;
+            color: #fff;
+            text-align: center;
+          }
+          .p-love-card-info{
+            font-size: 14px;
+            color: #fff;
+            text-align: center;
+          }
+        }
       }
 
     }
