--- a/src/04-product/components/style/ProductComment.scss
+++ b/src/04-product/components/style/ProductComment.scss
@@ -22,7 +22,7 @@ $main-border-radius: 8px;
     display: flex;
     flex-direction: column;
     width: 420px;
-    height: 500px;
+    // height: 500px;
 .a-commentWrapper {
     display: flex;
     flex-direction: column;
