--- a/src/04-product/components/style/ProductDetail.scss
+++ b/src/04-product/components/style/ProductDetail.scss
@@ -4,7 +4,6 @@ main {
   margin: 0;
   padding: 0;
   list-style: none;
-  letter-spacing: 2px;
 }
 
 $main-blue: #2b325c;
@@ -22,11 +21,29 @@ $main-border-radius: 8px;
 @function line($count: 1) {
   @return $base-line-eight * $count;
 }
+%a-text {
+  font-size: 25px;
+  font-weight: 800; 
+  color: #5e5e5e;
+  letter-spacing: 1.5px;
+}  
+%a-title {
+  font-size: 22px;
+  font-weight: 900; 
+  color: #2b325c;
+  letter-spacing: 1.5px;
+}
+%a-secondary-color-text {
+  font-size: 18px;
+  font-weight: 500; 
+  color: #113f75;
+}
 %a-flex {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -48,6 +65,10 @@ input[type="number"] {
 .a-productDatilsBigWrapper {
 display: flex;
 flex-direction: column;
+.a-userCommentWrapper{
+  padding-left: 8%;
+  margin-top: 20px;
+}
 .a-productDetailWrapper {
   display: flex;
   justify-content: space-evenly;
@@ -58,39 +79,40 @@ flex-direction: column;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    // margin-bottom: 10px;
     .a-shopNameWrapper {
       @extend %a-flex;
+      .a-detailsTitle {
+        @extend %a-title;
+      }
     }
     .a-shopNameWrapper img {
-      width: 40px;
+      width: 50px;
     }
     .a-detailsTitle {
-      color: $main-blue;
-      font-size: 18px;
-    }
-    .a-detailsTitle {
-      color: $main-blue;
-      font-size: 18px;
-    }
+    @extend %a-secondary-color-text;
+    } 
     .a-productName {
       @extend %a-flex;
+        .a-detailsTitle {
+          @extend %a-title;
+        }
     }
     .a-productName img {
-      width: 35px;
+      width: 50px;
     }
     .a-informationWrapper {
       display: flex;
       align-items: center;
+      margin: 15px 0;
     }
     .a-productCategory {
       @extend %a-flex;
-      color: $main-blue;
       background-color: $secondary-yellow;
       width: 115px;
       border-radius: $main-border-radius;
-      padding: 3px;
-      margin: 5px;
-      font-weight: 400;
+      width: 120px;
+      height: 50px;
     }
     .a-productCategory img {
       width: 30px;
@@ -98,25 +120,26 @@ flex-direction: column;
     }
     .a-shopDeadline {
       @extend %a-flex;
-      color: $main-blue;
       background-color: $secondary-yellow;
-      width: 160px;
-      height: 40px;
-      margin: 10px 0;
+      width: 280px;
+      height: 50px;
+      margin: 0 15px ;
       border-radius: $main-border-radius;
-      font-weight: 400;
+      img {
+        width: 30px;
+        padding-right: 3px;
     }
-    .a-shopDeadline img {
-      width: 30px;
-      padding-right: 3px;
     }
     .a-productCollection {
       @extend %a-flex;
       color: $main-blue;
       background-color: $secondary-yellow;
-      width: 160px;
-      height: 40px;
+      width: 200px;
+      height: 50px;
       border-radius: $main-border-radius;
+    }
+    .a-detailText {
+      @extend %a-title;
     }
     .a-productCollection img {
       width: 30px;
@@ -125,9 +148,7 @@ flex-direction: column;
     .a-productDescription {
       width: 600px;
       .a-detailsText {
-        color: $main-text;
-        font-size: 20px;
-        font-weight: 400;
+        @extend %a-text;
       }
     }
     .a-productRating {
@@ -142,6 +163,35 @@ flex-direction: column;
     width: 390px;
     border-radius: $main-border-radius;
     padding: 30px 0 10px 0;
+    position: relative;
+    .a-detailsText {
+     color: $main-text;
+     font-size: 20px;
+     font-weight: 600;
+    }
+    .a-discountIconBigWrapper {
+      position: absolute;
+      top: 52%;
+      right: -10%;
+    }
+    .a-saleWrapper {
+      width: 100px;
+      .a-detailsDiscount {
+        @extend %a-text;
+      }
+    }
+    .a-discountIconWrapper img {
+      width: 100%;
+      object-fit: cover;
+    }
+    .a-discountIconWrapper p {
+      font-size: 23px;
+      color: #fff;
+      position: absolute;
+      top: 35%;
+      left: 30%;
+      z-index: 1;
+    }
     .a-priceWrapper {
       display: flex;
       justify-content: space-around;
@@ -164,13 +214,16 @@ flex-direction: column;
     .a-productDiscount img {
       width: 35px;
     }
+    .a-productQty {
+      @extend %a-flex;
+      margin: 5px; 
+      .a-qtyTex {
+        @extend %a-secondary-color-text
+      }
+    }
     .a-productQuantity {
       @extend %a-flex;
-      margin: 5px;
-    }
-    .a-productQuantity p {
-      margin-right: 5px;
-      font-size: 16px;
+      margin: 5px; 
     }
     .a-minusButton {
       border: none;
@@ -181,9 +234,9 @@ flex-direction: column;
       border: none;
       background: #fff;
       color: $main-text;
-      height: 30px;
+      height: 35px;
       border-radius: 8px 0 0 8px;
-      font-size: 20px;
+      font-size: 25px;
     }
     .a-minusButton {
       border: none;
@@ -194,15 +247,15 @@ flex-direction: column;
       border: none;
       background: #fff;
       color: $main-text;
-      height: 30px;
+      height: 35px;
       border-radius: 0 8px 8px 0;
-      font-size: 20px;
+      font-size: 25px;
     }
     .a-qtyInput {
       border-radius: 0%;
       border: none;
       outline: none;
-      height: 30px;
+      height: 35px;
       text-align: center;
     }
     .a-qty {
@@ -231,16 +284,18 @@ flex-direction: column;
       background-color: #fff;
     }
     .a-addButton {
-      width: 200px;
+      width: 220px;
       text-align: center;
       @extend %a-flex;
       background-color: $main-yellow;
-      color: $main-blue;
       border: $main-border;
       border-radius: $main-border-radius;
       padding: 5px 20px;
-      margin: 15px 0 40px 0;
+      margin: 25px 0 40px 0;
       font-weight: 500;
+      .a-detailsText {
+        @extend %a-title;
+      }
     }
     .a-addButton img {
       width: 35px;
