--- a/src/06-event/styles/06-event-05-ticket.scss
+++ b/src/06-event/styles/06-event-05-ticket.scss
@@ -115,8 +115,7 @@ body {
 
   .j-bang-hide {
     @media (max-width: 390px) {
-      transform: scale(0.25);
-      margin-top: -230px;
+      display: none;
     }
     .j-box-top {
       z-index: 866;
@@ -144,6 +143,9 @@ body {
           top: -1300px;
           opacity: 0;
         }
+      }
+      @media (max-width: 390px) {
+        display: none;
       }
     }
     .j-box-bottom {
@@ -199,6 +201,9 @@ body {
           opacity: 0;
         }
       }
+      @media (max-width: 390px) {
+        display: none;
+      }
     }
     .j-box-left {
       z-index: 867;
@@ -225,6 +230,9 @@ body {
           top: -150px;
           opacity: 0;
         }
+      }
+      @media (max-width: 390px) {
+        display: none;
       }
     }
 
@@ -260,8 +268,7 @@ body {
       }
 
       @media (max-width: 390px) {
-        margin-left: -6%;
-        transform: scale(0.38);
+        display: none;
       }
     }
 
@@ -329,6 +336,13 @@ body {
     }
     &:hover {
       box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
+    }
+    @media (max-width: 390px) {
+      width: 340px;
+      top: 150px;
+      left: 10px;
+      animation: none;
+      transform: scale(1);
     }
     .j-ticket {
       width: 100%;
