--- a/src/05-member/style/UserSign.scss
+++ b/src/05-member/style/UserSign.scss
@@ -303,6 +303,7 @@ $s-main-b: #113f75;
           font-size: 16px;
           height: 100%;
           font-weight: 700;
+          border-radius: 8px;
           cursor: pointer;
 
           // border: 1px solid green;
