--- a/src/05-member/style/profile-pages/UpdateInfo.scss
+++ b/src/05-member/style/profile-pages/UpdateInfo.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  position: relative;
 
   // border: 1px solid blue;
 
@@ -127,7 +128,7 @@
               margin-left: 0;
               margin-top: 7px;
               text-align: left;
-              
+
               // border: 1px solid yellow;
             }
           }
@@ -245,6 +246,19 @@
       }
     }
   }
+
+  .s-svg-arrow {
+    width: 50px;
+    position: absolute;
+    bottom: 90px;
+    right: 0px;
+
+    // border: 1px solid red;
+
+    .s-svg-arrow-img {
+      width: 100%;
+    }
+  }
 }
 
 @media (max-width: 991px) {
@@ -254,6 +268,11 @@
 
     .s-ui-card {
       height: 670px;
+    }
+
+    .s-svg-arrow {
+      width: 30px;
+      bottom: 60px;
     }
   }
 }
