--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -13,7 +13,7 @@ $card-btn: #80b938;
   box-sizing: border-box;
 }
 
-.r-container {
+.r-shop-container {
   .r-main-visual {
     display: flex;
     justify-content: space-between;
